// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonList component renders correctly 1`] = `
<Fragment>
  <div
    className=" button-list-wrapper link-button-list-wrapper "
  >
    <ButtonCTA
      className="link-button-wrapper-class"
      ctaInfo={
        Object {
          "className": "link-button",
          "ctaVariation": "category-links-dark",
          "link": Object {
            "target": "_blank",
            "text": "GIRL",
            "title": "GIRL",
            "url": "/c/girls-clothing",
          },
        }
      }
      dataLocator="moduleN_cta_links_0"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      textAlign="center"
      uniqueKey="GIRL"
    />
    <ButtonCTA
      className="link-button-wrapper-class"
      ctaInfo={
        Object {
          "className": "link-button",
          "ctaVariation": "category-links-dark",
          "link": Object {
            "target": "_blank",
            "text": "BOY",
            "title": "BOY",
            "url": "https://test6.childrensplace.com/us/c/baby-clothes",
          },
        }
      }
      dataLocator="moduleN_cta_links_1"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      textAlign="center"
      uniqueKey="BOY"
    />
    <ButtonCTA
      className="link-button-wrapper-class"
      ctaInfo={
        Object {
          "className": "link-button",
          "ctaVariation": "category-links-dark",
          "link": Object {
            "target": "_blank",
            "text": "TODDLER BOY",
            "title": "TODDLER BOY",
            "url": "https://test6.childrensplace.com/us/c/toddler-boy-clothes",
          },
        }
      }
      dataLocator="moduleN_cta_links_2"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      textAlign="center"
      uniqueKey="TODDLER_BOY"
    />
    <ButtonCTA
      className="link-button-wrapper-class"
      ctaInfo={
        Object {
          "className": "link-button",
          "ctaVariation": "category-links-dark",
          "link": Object {
            "target": "_blank",
            "text": "TODDLER GIRL",
            "title": "TODDLER GIRL",
            "url": "https://test6.childrensplace.com/us/c/toddler-girl-clothes",
          },
        }
      }
      dataLocator="moduleN_cta_links_3"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      textAlign="center"
      uniqueKey="TODDLER_GIRL"
    />
  </div>
</Fragment>
`;

exports[`ButtonList component renders correctly for Dual Variation 1`] = `
<Fragment>
  <div
    className=" button-list-wrapper stacked-button-list-wrapper  is-tablet-hidden"
  >
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "target": "_blank",
            "text": "GIRL",
            "title": "GIRL",
            "url": "/c/girls-clothing",
          },
        }
      }
      dataLocator="moduleB_cta_links_0"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="GIRL"
    />
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "target": "_blank",
            "text": "BOY",
            "title": "BOY",
            "url": "https://test6.childrensplace.com/us/c/baby-clothes",
          },
        }
      }
      dataLocator="moduleB_cta_links_1"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="BOY"
    />
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "target": "_blank",
            "text": "TODDLER BOY",
            "title": "TODDLER BOY",
            "url": "https://test6.childrensplace.com/us/c/toddler-boy-clothes",
          },
        }
      }
      dataLocator="moduleB_cta_links_2"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="TODDLER_BOY"
    />
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "target": "_blank",
            "text": "TODDLER GIRL",
            "title": "TODDLER GIRL",
            "url": "https://test6.childrensplace.com/us/c/toddler-girl-clothes",
          },
        }
      }
      dataLocator="moduleB_cta_links_3"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="TODDLER_GIRL"
    />
  </div>
  <Styled(DropDownButton)
    buttonsData={
      Array [
        Object {
          "button": Object {
            "target": "_blank",
            "text": "GIRL",
            "title": "GIRL",
            "url": "/c/girls-clothing",
          },
          "image": Object {
            "alt": "Girl",
            "crop_d": "",
            "crop_m": "",
            "crop_t": "",
            "title": "Girl",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
          },
        },
        Object {
          "button": Object {
            "target": "_blank",
            "text": "BOY",
            "title": "BOY",
            "url": "https://test6.childrensplace.com/us/c/baby-clothes",
          },
          "image": Object {
            "alt": "Girl",
            "crop_d": "",
            "crop_m": "",
            "crop_t": "",
            "title": "Girl",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
          },
        },
        Object {
          "button": Object {
            "target": "_blank",
            "text": "TODDLER BOY",
            "title": "TODDLER BOY",
            "url": "https://test6.childrensplace.com/us/c/toddler-boy-clothes",
          },
          "image": Object {
            "alt": "Girl",
            "crop_d": "",
            "crop_m": "",
            "crop_t": "",
            "title": "Girl",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
          },
        },
        Object {
          "button": Object {
            "target": "_blank",
            "text": "TODDLER GIRL",
            "title": "TODDLER GIRL",
            "url": "https://test6.childrensplace.com/us/c/toddler-girl-clothes",
          },
          "image": Object {
            "alt": "Girl",
            "crop_d": "",
            "crop_m": "",
            "crop_t": "",
            "title": "Girl",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
          },
        },
      ]
    }
    className=" additional-button-list hide-on-small-viewport"
    dataLocatorItemPrefix="moduleB_cta_links_"
    dropdownLabel="Shop Now"
  />
</Fragment>
`;

exports[`ButtonList component renders correctly for image cta List 1`] = `
<Fragment>
  <div
    className=" button-list-wrapper scroll-button-list-wrapper   "
  >
    <ImageTextCTA
      className="scroll-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "image-cta",
          "link": Object {
            "target": "_blank",
            "text": "GIRL",
            "title": "GIRL",
            "url": "/c/girls-clothing",
          },
        }
      }
      dataLocator="moduleN_image_0"
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      textAlign="center"
      uniqueKey="GIRL"
    />
    <ImageTextCTA
      className="scroll-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "image-cta",
          "link": Object {
            "target": "_blank",
            "text": "BOY",
            "title": "BOY",
            "url": "https://test6.childrensplace.com/us/c/baby-clothes",
          },
        }
      }
      dataLocator="moduleN_image_1"
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      textAlign="center"
      uniqueKey="BOY"
    />
    <ImageTextCTA
      className="scroll-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "image-cta",
          "link": Object {
            "target": "_blank",
            "text": "TODDLER BOY",
            "title": "TODDLER BOY",
            "url": "https://test6.childrensplace.com/us/c/toddler-boy-clothes",
          },
        }
      }
      dataLocator="moduleN_image_2"
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      textAlign="center"
      uniqueKey="TODDLER_BOY"
    />
    <ImageTextCTA
      className="scroll-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "image-cta",
          "link": Object {
            "target": "_blank",
            "text": "TODDLER GIRL",
            "title": "TODDLER GIRL",
            "url": "https://test6.childrensplace.com/us/c/toddler-girl-clothes",
          },
        }
      }
      dataLocator="moduleN_image_3"
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      textAlign="center"
      uniqueKey="TODDLER_GIRL"
    />
  </div>
</Fragment>
`;

exports[`ButtonList component renders correctly for scroll cta buttons 1`] = `
<Fragment>
  <div
    className=" button-list-wrapper scroll-button-list-wrapper   "
  >
    <ButtonCTA
      className="scroll-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "scroll-button",
          "ctaVariation": "variable-width",
          "link": Object {
            "target": "_blank",
            "text": "GIRL",
            "title": "GIRL",
            "url": "/c/girls-clothing",
          },
        }
      }
      dataLocator="moduleN_cta_links_0"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      textAlign="center"
      uniqueKey="GIRL"
    />
    <ButtonCTA
      className="scroll-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "scroll-button",
          "ctaVariation": "variable-width",
          "link": Object {
            "target": "_blank",
            "text": "BOY",
            "title": "BOY",
            "url": "https://test6.childrensplace.com/us/c/baby-clothes",
          },
        }
      }
      dataLocator="moduleN_cta_links_1"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      textAlign="center"
      uniqueKey="BOY"
    />
    <ButtonCTA
      className="scroll-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "scroll-button",
          "ctaVariation": "variable-width",
          "link": Object {
            "target": "_blank",
            "text": "TODDLER BOY",
            "title": "TODDLER BOY",
            "url": "https://test6.childrensplace.com/us/c/toddler-boy-clothes",
          },
        }
      }
      dataLocator="moduleN_cta_links_2"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      textAlign="center"
      uniqueKey="TODDLER_BOY"
    />
    <ButtonCTA
      className="scroll-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "scroll-button",
          "ctaVariation": "variable-width",
          "link": Object {
            "target": "_blank",
            "text": "TODDLER GIRL",
            "title": "TODDLER GIRL",
            "url": "https://test6.childrensplace.com/us/c/toddler-girl-clothes",
          },
        }
      }
      dataLocator="moduleN_cta_links_3"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      textAlign="center"
      uniqueKey="TODDLER_GIRL"
    />
  </div>
</Fragment>
`;

exports[`ButtonList component renders correctly with props for stacked CTA buttons 1`] = `
<Fragment>
  <div
    className=" button-list-wrapper stacked-button-list-wrapper  "
  >
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "target": "_blank",
            "text": "GIRL",
            "title": "GIRL",
            "url": "/c/girls-clothing",
          },
        }
      }
      dataLocator="moduleN_cta_links_0"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="GIRL"
    />
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "target": "_blank",
            "text": "BOY",
            "title": "BOY",
            "url": "https://test6.childrensplace.com/us/c/baby-clothes",
          },
        }
      }
      dataLocator="moduleN_cta_links_1"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="BOY"
    />
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "target": "_blank",
            "text": "TODDLER BOY",
            "title": "TODDLER BOY",
            "url": "https://test6.childrensplace.com/us/c/toddler-boy-clothes",
          },
        }
      }
      dataLocator="moduleN_cta_links_2"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="TODDLER_BOY"
    />
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "target": "_blank",
            "text": "TODDLER GIRL",
            "title": "TODDLER GIRL",
            "url": "https://test6.childrensplace.com/us/c/toddler-girl-clothes",
          },
        }
      }
      dataLocator="moduleN_cta_links_3"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="TODDLER_GIRL"
    />
  </div>
</Fragment>
`;

exports[`ButtonList component renders correctly without props 1`] = `
<Fragment>
  <div
    className=" button-list-wrapper stacked-button-list-wrapper  "
  >
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "target": "_blank",
            "text": "GIRL",
            "title": "GIRL",
            "url": "/c/girls-clothing",
          },
        }
      }
      dataLocator="0"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="GIRL"
    />
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "target": "_blank",
            "text": "BOY",
            "title": "BOY",
            "url": "https://test6.childrensplace.com/us/c/baby-clothes",
          },
        }
      }
      dataLocator="1"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="BOY"
    />
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "target": "_blank",
            "text": "TODDLER BOY",
            "title": "TODDLER BOY",
            "url": "https://test6.childrensplace.com/us/c/toddler-boy-clothes",
          },
        }
      }
      dataLocator="2"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="TODDLER_BOY"
    />
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "target": "_blank",
            "text": "TODDLER GIRL",
            "title": "TODDLER GIRL",
            "url": "https://test6.childrensplace.com/us/c/toddler-girl-clothes",
          },
        }
      }
      dataLocator="3"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="TODDLER_GIRL"
    />
  </div>
</Fragment>
`;
